Perkin-UAT/force-app/main/default/objects/FCO_Schedule__c/FCO_Schedule__c.object-meta.xml
<CustomObject>
    <label>FCO Schedule</label>
    <nameField>
        <displayFormat>FSCH-{0000}</displayFormat>
        <label>FCO Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCO Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>