Perkin-UAT/force-app/main/default/objects/FCO_Schedule__c/fields/FCO__c.field-meta.xml
<CustomField>
    <fullName>FCO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FCO</label>
    <referenceTo>FCO__c</referenceTo>
    <relationshipLabel>FCO Schedules</relationshipLabel>
    <relationshipName>FCO_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>