Perkin-UAT/force-app/main/default/objects/FCO_Schedule__c/fields/FCO_Search__c.field-meta.xml
<CustomField>
    <fullName>FCO_Search__c</fullName>
    <label>FCO Search</label>
    <referenceTo>FCO_Search__c</referenceTo>
    <relationshipLabel>FCO Schedules</relationshipLabel>
    <relationshipName>FCO_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>