Perkin-UAT/force-app/main/default/objects/FCO_Schedule__c/fields/Last_Processed_time__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_time__c</fullName>
    <label>Last Processed time</label>
    <type>DateTime</type>
</CustomField>